--- a/Calculate/app/src/main/res/values/strings.xml
+++ b/Calculate/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">计算器</string>
     <string name="logo">oppo</string>
+    <string name="tip_click">点击了按钮</string>
 </resources>
